# aoc2018

./: README.md  TODO.md  cmake-clang-wsl.sh  main.py
day01/: 01.py  day01.py  solution.py
day02/: day02.py  solution.py
day03/: day03.py  solution.py  test_input.txt
day04/: day04.py  solution.py
day05/: day05.py  solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: CMakeLists.txt  cpp.cpp  solution.cpp  solution.hpp  solution.py
day13/: solution.py
day14/: solution.py
utilities/: framework.py  list_utils.py
